hphp/hack/test/typecheck/destructure/union_bad.php.exp
ERROR: File "union_bad.php", line 7, characters 3-7:
Missing `...`: the shape type has unknown fields, so the destructuring pattern must end with `...` (Typing[4510])
ERROR: File "union_bad.php", line 13, characters 3-29:
Typing error (Typing[4163])
  File "union_bad.php", line 11, characters 3-72:
  The field `b` is **optional**
  File "union_bad.php", line 13, characters 3-29:
  The field `b` is defined as **required**
  File "union_bad.php", line 13, characters 20-22:
  `b` is defined here
ERROR: File "union_bad.php", line 19, characters 3-7:
Tuple arity mismatch: expected 2 elements in destructuring pattern but the tuple type has 3 (Typing[4513])
ERROR: File "union_bad.php", line 25, characters 3-7:
Tuple arity mismatch: expected 2 elements in destructuring pattern but the tuple type has 1 (Typing[4513])
ERROR: File "union_bad.php", line 25, characters 3-15:
Typing error (Typing[4110])
  File "union_bad.php", line 25, characters 3-15:
  Expected `(_, _, mixed...)` resulting from a shape or tuple destructuring pattern
  File "union_bad.php", line 23, characters 4-9:
  But got `(int)`
ERROR: File "union_bad.php", line 31, characters 3-29:
Typing error (Typing[4163])
  File "union_bad.php", line 29, characters 3-56:
  The field `b` is **optional**
  File "union_bad.php", line 31, characters 3-29:
  The field `b` is defined as **required**
  File "union_bad.php", line 31, characters 20-22:
  `b` is defined here
ERROR: File "union_bad.php", line 37, characters 3-34:
Typing error (Typing[4163])
  File "union_bad.php", line 35, characters 3-58:
  The field `y` is **optional**
  File "union_bad.php", line 37, characters 3-34:
  The field `y` is defined as **required**
  File "union_bad.php", line 37, characters 20-22:
  `y` is defined here
